src/objects/PagesApi__Component__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of dynamic components that can be used to create new page elements.</description>
    <fields>
        <fullName>PagesApi__Apex_Class__c</fullName>
        <description>The name of the Apex Class that implements the dynamic component interface.</description>
        <inlineHelpText>The name of the Apex Class that implements the dynamic component interface.</inlineHelpText>
        <label>Apex Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Description__c</fullName>
        <description>Short description for the Dynamic Component.</description>
        <inlineHelpText>Short description for the Dynamic Component.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Do_Not_Display_In_Page_Builder_UI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Component will not be made available for selection in the page builder ui.</description>
        <inlineHelpText>When checked, the Component will not be made available for selection in the page builder ui.</inlineHelpText>
        <label>Do Not Display In Page Builder UI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Has_Body__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, users can define custom html that will be inserted into the apex:componentBody. Default false.</description>
        <inlineHelpText>If true, users can define custom html that will be inserted into the apex:componentBody. Default false.</inlineHelpText>
        <label>Has Body</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Icon_Path__c</fullName>
        <defaultValue>&quot;https://dl.dropboxusercontent.com/u/74862951/no_image.jpg&quot;</defaultValue>
        <description>The path to the component Icon that can be used in various pages</description>
        <inlineHelpText>Provide the Icon path that can be utilized in the various pages</inlineHelpText>
        <label>Icon Path</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PagesApi__Image_Path__c</fullName>
        <description>Link to an image file showing an example implementation of the dynamic component.</description>
        <inlineHelpText>Link to an image file showing an example implementation of the dynamic component.</inlineHelpText>
        <label>Image Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Preview_Width__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Preview Width</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Component</label>
</CustomObject>